objects/ArchivedEntityFeed__c.object
<CustomObject>
    <fields>
        <fullName>entityId__c</fullName>
        <label>Entity Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>entityObjectType__c</fullName>
        <label>Entity Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Archived Entity Feed</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Archived Entity Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Entity Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>